<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.SignInActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/text_hint_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/text_hint_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/background_button_r20"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/background_button_r20"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInButton" />
</androidx.constraintlayout.widget.ConstraintLayout>