<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/change_profile_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/text_hint_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        tools:text="username" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/descriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/text_hint_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText"
        android:text="@string/state_message" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/applyButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/background_button_r20"
        android:text="@string/do_apply"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signOutButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/background_button_r20"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/applyButton" />
</androidx.constraintlayout.widget.ConstraintLayout>